objects/LearningBoardAndTopics__c.object
<CustomObject>
    <fields>
        <fullName>Learning_Board_Id__c</fullName>
        <label>Learning Board</label>
        <referenceTo>Learning_Board__c</referenceTo>
        <relationshipLabel>LearningBoardAndTopics</relationshipLabel>
        <relationshipName>LearningBoardAndTopics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Learning_Board_Name__c</fullName>
        <label>Learning_Board_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_Description__c</fullName>
        <label>Learning_Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Learning_Id__c</fullName>
        <label>Learning</label>
        <referenceTo>Learning__c</referenceTo>
        <relationshipLabel>LearningBoardAndTopics</relationshipLabel>
        <relationshipName>LearningBoardAndTopics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Learning_Name__c</fullName>
        <label>Learning_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LearningBoardAndTopics</label>
    <nameField>
        <label>LearningBoardAndTopics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LearningBoardAndTopics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>